--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/three": "^0.178.1",
     "astro": "^5.11.0",
     "tailwindcss": "^4.1.11",
-    "three": "^0.178.0"
+    "three": "^0.178.0",
+    "vite-plugin-glsl": "^1.5.1"
   }
 }
